--- a/templates/indice/last.html.twig
+++ b/templates/indice/last.html.twig
@@ -23,7 +23,7 @@
                             {{ indice.point_name }}
                         </td>
                         <td>
-                            {{ indice.ts|format_date('full') }}
+                            {{ indice.ts|format_datetime('full','medium') }}
                         </td>
                         <td>
                             {{ indice.aqi_value }}
