--- a/templates/station/indice.html.twig
+++ b/templates/station/indice.html.twig
@@ -34,7 +34,7 @@
                             <tr>
                                 <th>Date</th>
                                 <td>
-                                    {{ lastIndice.ts|format_date('full') }}
+                                    {{ lastIndice.ts|format_datetime('full', 'medium') }}
                                 </td>
                             </tr>
                             <tr>
