--- a/templates/station/_station.html.twig
+++ b/templates/station/_station.html.twig
@@ -11,14 +11,14 @@
             attrib_start<br>
             <span class="text-muted">Début</span>
         </th>
-        <td>{{ station.attrib_start|format_date('full') }} </td>
+        <td>{{ station.attribStart|format_date('full') }} </td>
     </tr>
     <tr>
         <th>
             attrib_end<br>
             <span class="text-muted">Fin</span>
         </th>
-        <td>{{ station.attrib_end|format_date('full') }} </td>
+        <td>{{ station.attribEnd|format_date('full') }} </td>
     </tr>
     <tr>
         <th>
@@ -43,14 +43,14 @@
             id_reseau<br>
             <span class="text-muted">Identifiant réseau</span>
         </th>
-        <td>{{ station.id_reseau }}</td>
+        <td>{{ station.idReseau }}</td>
     </tr>
     <tr>
         <th>
             id_configuration<br>
             <span class="text-muted">Identifiant de la configuration</span>
         </th>
-        <td>{{ station.id_configuration }}</td>
+        <td>{{ station.idConfiguration }}</td>
     </tr>
     <tr>
         <th>
