--- a/templates/station/config.html.twig
+++ b/templates/station/config.html.twig
@@ -13,7 +13,7 @@
                         id_configuration<br>
                         <span class="text-muted">Identifiant de la configuration</span>
                     </th>
-                    <td>{{ config.id_configuration }}</td>
+                    <td>{{ config.idConfiguration }}</td>
                 </tr>
                 <tr>
                     <th>
