--- a/templates/station/indice.html.twig
+++ b/templates/station/indice.html.twig
@@ -39,7 +39,7 @@
                             </tr>
                             <tr>
                                 <th>BelAQI</th>
-                                <td>{{ lastIndice.aqi_value }}</td>
+                                <td>{{ lastIndice.aqiValue }}</td>
                             </tr>
                             <tr>
                                 <th>Label</th>
