--- a/templates/indice/last.html.twig
+++ b/templates/indice/last.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 
     <div class="card">
-        <h3 class="card-header">{{ indices|length }} indices sur les 6 derniers mois</h3>
+        <h3 class="card-header">{{ indices|length }} les derniers indices belAqui</h3>
         <div class="card-body">
             {% include '@AcMarcheIssep/_urlexecuted.html.twig' %}
             <table class="table table-bordered">
