--- a/templates/station/indice.html.twig
+++ b/templates/station/indice.html.twig
@@ -11,7 +11,7 @@
             <table class="table table-striped table-hover">
                 <tr>
                     <th>Id config</th>
-                    <td>{{ station.id_configuration }}</td>
+                    <td>{{ station.idConfiguration }}</td>
                 </tr>
             </table>
             {% include '@AcMarcheIssep/_urlexecuted.html.twig' %}
@@ -23,7 +23,7 @@
                     Index" pour plus d'informations sur cet indice</a><br>
             </div>
 
-            {% if lastIndice %}
+            {% if station.lastBelAqi %}
                 <div class="row">
                     <div class="col-6 p-5">
                         {% include '@AcMarcheIssep/station/_feu.html.twig' %}
@@ -34,23 +34,23 @@
                             <tr>
                                 <th>Date</th>
                                 <td>
-                                    {{ lastIndice.ts|format_datetime('full', 'medium') }}
+                                    {{ station.lastBelAqi.ts|format_datetime('full', 'medium') }}
                                 </td>
                             </tr>
                             <tr>
                                 <th>BelAQI</th>
-                                <td>{{ lastIndice.aqiValue }}</td>
+                                <td>{{ station.lastBelAqi.aqiValue }}</td>
                             </tr>
                             <tr>
                                 <th>Label</th>
                                 <td>
-                                    {{ lastIndice.label }}
+                                    {{ station.lastBelAqi.label }}
                                 </td>
                             </tr>
                             <tr>
                                 <th>Couleur</th>
                                 <td>
-                                    {% include '@AcMarcheIssep/station/_color.html.twig' with {'indice': lastIndice} %}
+                                    {% include '@AcMarcheIssep/station/_color.html.twig' with {'indice': station.lastBelAqi} %}
                                 </td>
                             </tr>
                         </table>
