--- a/templates/station/_historique.html.twig
+++ b/templates/station/_historique.html.twig
@@ -8,7 +8,7 @@
         {% for airQualityData in station.airQualityData %}
             <tr>
                 <td>
-                    {{ dump(airQualityData) }}
+                    airQualityData
                 </td>
             </tr>
         {% endfor %}
