--- a/templates/station/h24.html.twig
+++ b/templates/station/h24.html.twig
@@ -1,14 +1,14 @@
 {% extends '@AcMarcheIssep/layout.html.twig' %}
 {% block stylesheets %}
-        {{ parent() }}
+    {{ parent() }}
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/acmarcheissep/feux.css') }}"/>
 {% endblock %}
 {% block body %}
-<div class="card">
-    <h3 class="card-header">Aujourd'hui {{ station.nom }}</h3>
-    <div class="card-body" style="z-index: 3;">
-        {% include '@AcMarcheIssep/_urlexecuted.html.twig' %}
-        {% include '@AcMarcheIssep/station/_historique.html.twig' with {'date':today} %}
+    <div class="card">
+        <h3 class="card-header">Aujourd'hui (24h) {{ station.nom }}</h3>
+        <div class="card-body" style="z-index: 3;">
+
+            {% include '@AcMarcheIssep/station/_historique.html.twig' %}
+        </div>
     </div>
-</div>
 {% endblock %}
