--- a/templates/indice/last.html.twig
+++ b/templates/indice/last.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 
     <div class="card">
-        <h3 class="card-header">{{ indices|length }} les derniers indices belAqui</h3>
+        <h3 class="card-header">Les derniers indices belAqi</h3>
         <div class="card-body">
             <table class="table table-bordered">
                 <thead>
