--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -37,4 +37,9 @@
             <i class="fas fa-info"></i> Légende
         </a>
     </li>
+    <li class="nav-item">
+        <a href="{{ path('issep_brut') }}" class="nav-link">
+            <i class="fas fa-info"></i> Données brutes
+        </a>
+    </li>
 {% endblock %}
