--- a/templates/indice/brut.html.twig
+++ b/templates/indice/brut.html.twig
@@ -9,9 +9,9 @@
                 Les données reçues par l'issep, sans manipulation.
             </div>
             <h4>Stations</h4>
-            {{ dump(stations) }}
+            {{ stations }}
             <h4>Derniers belaqi</h4>
-            {{ dump(indices) }}
+            {{ indices }}
         </div>
     </div>
 
