--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -33,6 +33,11 @@
         </a>
     </li>
     <li class="nav-item">
+        <a href="{{ path('issep_search') }}" class="nav-link">
+            <i class="fas fa-search"></i> Rechercher
+        </a>
+    </li>
+    <li class="nav-item">
         <a href="{{ path('issep_legend') }}" class="nav-link">
             <i class="fas fa-info"></i> Légende
         </a>
