--- a/templates/station/legend.html.twig
+++ b/templates/station/legend.html.twig
@@ -5,6 +5,15 @@
     <div class="card">
         <h3 class="card-header">Légende</h3>
         <div class="card-body">
+
+            <div class="alert alert-info" style="position: relative; z-index: 1">
+                <a href="https://www.irceline.be/fr/qualite-de-lair/mesures/belaqi-indice-de-la-qualite-de-lair/information"
+                   target="_blank">L'indice belaqi varie de 1 à 10</a>
+                <br>
+                Cliquez sur <a href="https://airindex.eea.europa.eu/AQI/index.html">"About the European Air Quality
+                    Index" pour plus d'informations sur cet indice</a><br>
+            </div>
+
             {% include '@AcMarcheIssep/station/_legend.html.twig' %}
         </div>
     </div>
