--- a/templates/indice/_belaqi_details.html.twig
+++ b/templates/indice/_belaqi_details.html.twig
@@ -1,32 +1,29 @@
 <div class="row">
-                    <div class="col-6 p-5">
-                        {% include '@AcMarcheIssep/station/_feu.html.twig' %}
-                    </div>
-                    <div class="col-6">
-                        <h4 class="text-success">Dernier relevé</h4>
-                        <table class="table table-bordered">
-                            <tr>
-                                <th>Date</th>
-                                <td>
-                                    {{ station.lastBelAqi.ts|format_datetime('full', 'medium') }}
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>BelAQI</th>
-                                <td>{{ station.lastBelAqi.aqiValue }}</td>
-                            </tr>
-                            <tr>
-                                <th>Label</th>
-                                <td>
-                                    {{ station.lastBelAqi.label }}
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Couleur</th>
-                                <td>
-                                    {% include '@AcMarcheIssep/station/_color.html.twig' with {'indice': station.lastBelAqi} %}
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
+    <div class="col-6">
+        <h4 class="text-success">Dernier relevé</h4>
+        <table class="table table-bordered">
+            <tr>
+                <th>Date</th>
+                <td>
+                    {{ belAqi.ts|format_datetime('full', 'medium') }}
+                </td>
+            </tr>
+            <tr>
+                <th>BelAQI</th>
+                <td>{{ belAqi.aqiValue }}</td>
+            </tr>
+            <tr>
+                <th>Label</th>
+                <td>
+                    {{ belAqi.label }}
+                </td>
+            </tr>
+            <tr>
+                <th>Couleur</th>
+                <td>
+                    {% include '@AcMarcheIssep/station/_color.html.twig' %}
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
