--- a/templates/station/_color.html.twig
+++ b/templates/station/_color.html.twig
@@ -1,1 +1,1 @@
-<span class="myCircle" style="background-color: {{ indice.color }};" title="{{ indice.label }}"></span>
+<span class="myCircle" style="background-color: {{ belAqi.color }};" title="{{ belAqi.label }}"></span>
